# licenses

./: Cargo.toml  todo.md
src/: arguments.rs  check.rs  config.rs  dependency.rs  files.rs  filter.rs  get.rs  identity.rs  interrupt.rs  license.rs  local.rs  main.rs  metadata.rs  package.rs  package_licenses.rs  packages.rs  prune.rs  remote.rs  report.rs  reporter.rs  review.rs  summary.rs  warning.rs
src/config/: arguments.rs  mod.rs  toml.rs
src/license/: local.rs  mod.rs  output.rs  remote.rs
src/lint/: copy_left.rs  extraneous.rs  misnamed.rs  missing_or_unexpected.rs  mod.rs  no_cargo_license.rs  no_licenses.rs  report.rs  unknown_type.rs  unmet_spdx.rs
src/package/: dependencies.rs  mod.rs  package_id.rs  package_licenses.rs
