[package]
name = "licenses"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "*", default-features = true, features = ["derive"] }
cargo_metadata = { version = "*", default-features = false }
anyhow = "*"
ureq = { version = "*", features = ["json"] }
url = { version = "*", features = ["serde"] }
serde = { version = "*", features = ["derive"] }
spdx = { version = "*", features = ["detection-parallel", "detection", "detection-inline-cache"] }
rayon = "*"
indicatif = { version = "*", features = ["rayon"] }
colored = "*"
tabled = "*"
itertools = "*"
terminal_size = "*"
crates_io_api = "*"
serde_json = "*"
ctrlc = "*"
jiff = { version = "*", features = ["serde"] }

[dev-dependencies]
tempfile = "*"

[lints.clippy]
print_stdout = "deny"