[package]
name = "licenses"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "*", default-features = true, features = ["derive"] }
cargo_metadata = { version = "*", default-features = false }
anyhow = "*"
ureq = { version = "*", features = ["json"] }
url = { version = "*", features = ["serde"] }
serde = { version = "*", features = ["derive"] }
spdx = { version = "*", features = ["detection-parallel", "detection", "detection-inline-cache"] }
rayon = "*"
indicatif = { version = "*", features = ["rayon"] }
serde_json = "*"
colored = "*"
tabled = "*"
itertools = "*"
terminal_size = "*"
documented = "*"
crates_io_api = "*"
# without the "vendored" openssl, crates_io_api drags in a version of openssl that always recompiles,
# because it thinks PKG_CONFIG_PATH is always changing every build.
# Even though this crate is not directly used, it forces the crates_io_api transitive dependency to also have this feature.
openssl = { version = "*", features = ["vendored"] }

[dev-dependencies]
tempfile = "*"

[package.metadata.licenses]
allow = [
    "copy-left", "unknown-type:aho_corasick-COPYING", "unknown-type:encode_unicode-AUTHORS.md",
    "unknown-type:linux_raw_sys-COPYRIGHT", "unknown-type:memchr-COPYING"
]