[package]
name = "licenses"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "*", default-features = true, features = ["derive"] }
cargo_metadata = { version = "*", default-features = false, features = ["builder"] }
anyhow = "*"
ureq = { version = "*", features = ["json"] }
url = { version = "*", features = ["serde"] }
serde = { version = "*", features = ["derive"] }
spdx = { version = "*", features = [
    "detection-parallel",
    "detection",
    "detection-inline-cache",
] }
rayon = "*"
indicatif = { version = "*", features = ["rayon"] }
serde_json = "*"
colored = "*"
tabled = "*"
itertools = "*"
terminal_size = "*"
documented = "*"

[dev-dependencies]
tempfile = "*"

[package.metadata.licenses]
allow = ["copy-left", "unknown-type:aho-corasick_1.1.4_COPYING"]
